@@ -13,6 +13,7 @@ Changes/bug fixes
 * Add tag cloud interactive sphere output support (bug 38094) (mwjames)
 * Add tag cloud template support (bug 37695) (mwjames)
 * Add gallery slideshow support (bug 38184) (mwjames)
+* Fixed gallery and Special:Ask display (bug 38296) (mwjames)
 
 New formats in this version are:
 * slideshow (written by Stephan Gambke)
